# ayllu-plutus-sc

./: README.md
.github/ISSUE_TEMPLATE/: engineering-design-issue.md
V2/earn/: AylluRewardsV2.cabal  cabal.project
V2/earn/src/: Params.hs  Setup.hs  Validators.hs
earn/: README.md  README.md~  cabal.project  earn.cabal
earn/src/: Rewards.hs  Setup.hs  Trace.hs  Utils.hs  Validators.hs
enrollment/: README.md  cabal.project  enrollment.cabal  hie.yaml
enrollment/src/: Policies.hs  Registrar.hs  Student.hs  Trace.hs  Utils.hs  Validators.hs
