cabal-version:      2.4
name:               exmp01
version:            0.1.0.0
synopsis:           Signed grab

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             ajuggler
maintainer:         contacto@antoniohernandez.mx

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Trace
                    , Validators
                    , Setup
                    , Rewards
                    , Utils
                    , Params

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-script-utils
                    , plutus-tx-plugin
                    , plutus-tx
                    , text

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

--    build-depends: (from Luis)
      -- base >= 4.9 && < 5,
      -- * aeson -any,
      -- bytestring -any,
      -- * containers -any,
      -- * freer-extras -any,
      -- * playground-common -any,
      -- * plutus-contract -any,
      -- * plutus-ledger -any,
      -- * plutus-ledger-api -any,
      -- * plutus-ledger-constraints -any,
      -- * plutus-tx -any,
      -- * plutus-tx-plugin -any,
      -- * plutus-script-utils -any,
      -- * text -any,
      -- lens -any,
      -- cardano-api, 
      -- cardano-binary,
      -- --additionals
      -- serialise -any,
      -- base16-bytestring,
      -- data-default,
    