cabal-version:      2.4
name:               AylluRewardsV2
version:            0.1.0.0
synopsis:           AylluRewards bootsrap cabal project derived from Signed (By Antonio)
homepage:           https://www.vortecsla.com/plutus
license:            MIT
license-file:       LICENSE
author:             Roberto J. Cerrud and Antonio Hernandez
maintainer:         vortecsmaster@vortecsla.com and contacto@antoniohernandez.mx
category:           Education
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Validators
    build-depends:      base ^>=4.14.1.0
                      , aeson -any
                      , bytestring -any
                      , containers -any
                      , data-default 
                      , freer-extras -any
                      , playground-common -any
                      , plutus-contract -any
                      , plutus-ledger -any
                      , plutus-ledger-api -any
                      , plutus-ledger-constraints -any
                      , plutus-script-utils
                      , plutus-tx -any
                      , plutus-tx-plugin -any
                      , text -any
                      , lens -any
                      , serialise
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
